Added passthrough endpoints for all transactionRequests endpoint i.e.: POST /transactionRequests GET /transactionRequests/{ID} PUT /transactionRequests/{ID} PUT /transactionRequests/{ID}/error
Updated swagger definition to cater for new endpoints
Updated dependencies
Moved some enums to enums file in /lib folder
Removed function names on routes functions
