# src/interface/swagger.json
@@ -978,6 +978,409 @@
           }
         }
       }
+    },
+    "/transactionRequests/{ID}/error": {
+      "put": {
+        "description": "If the server is unable to find or create a transaction request, or another processing error occurs, the error callback PUT /transactionRequests/<ID>/error is used. The <ID> in the URI should contain the transactionRequestId that was used for the creation of the transaction request, or the <ID> that was used in the GET /transactionRequests/<ID>.",
+        "summary": "TransactionRequestsErrorByID",
+        "tags": [
+          "transactionRequests"
+        ],
+        "operationId": "TransactionRequestsErrorByID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/parameters/ID"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ErrorInformationObject"
+            }
+          },
+          {
+            "$ref": "#/parameters/Content-Length"
+          },
+          {
+            "$ref": "#/parameters/Content-Type"
+          },
+          {
+            "$ref": "#/parameters/Date"
+          },
+          {
+            "$ref": "#/parameters/X-Forwarded-For"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Source"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Destination"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Encryption"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Signature"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-URI"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-HTTP-Method"
+          }
+        ],
+        "x-examples": {
+          "application/json": {
+            "“errorInformation”": {
+              "“errorCode”": "“5100”",
+              "“errorDescription”": "“This is an error description”",
+              "extensionList": {
+                "extension": [
+                  {
+                    "“key”": "“errorDescription”",
+                    "“value”": "“This is a more detailed error description”"
+                  },
+                  {
+                    "“key”": "“errorDescription”",
+                    "“value”": "“This is a more detailed error description”"
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/responses/Response200"
+          },
+          "400": {
+            "$ref": "#/responses/ErrorResponse400"
+          },
+          "401": {
+            "$ref": "#/responses/ErrorResponse401"
+          },
+          "403": {
+            "$ref": "#/responses/ErrorResponse403"
+          },
+          "404": {
+            "$ref": "#/responses/ErrorResponse404"
+          },
+          "405": {
+            "$ref": "#/responses/ErrorResponse405"
+          },
+          "406": {
+            "$ref": "#/responses/ErrorResponse406"
+          },
+          "501": {
+            "$ref": "#/responses/ErrorResponse501"
+          },
+          "503": {
+            "$ref": "#/responses/ErrorResponse503"
+          }
+        }
+      }
+    },
+    "/transactionRequests/{ID}": {
+      "parameters": [
+        {
+          "$ref": "#/parameters/ID"
+        },
+        {
+          "$ref": "#/parameters/Content-Type"
+        },
+        {
+          "$ref": "#/parameters/Date"
+        },
+        {
+          "$ref": "#/parameters/X-Forwarded-For"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-Source"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-Destination"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-Encryption"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-Signature"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-URI"
+        },
+        {
+          "$ref": "#/parameters/FSPIOP-HTTP-Method"
+        }
+      ],
+      "get": {
+        "description": "The HTTP request GET /transactionRequests/<ID> is used to get information regarding an earlier created or requested transaction request. The <ID> in the URI should contain the transactionRequestId that was used for the creation of the transaction request.",
+        "summary": "TransactionRequestsByID",
+        "tags": [
+          "transactionRequests"
+        ],
+        "operationId": "TransactionRequestsByID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/parameters/Accept"
+          }
+        ],
+        "responses": {
+          "202": {
+            "$ref": "#/responses/Response202"
+          },
+          "400": {
+            "$ref": "#/responses/ErrorResponse400"
+          },
+          "401": {
+            "$ref": "#/responses/ErrorResponse401"
+          },
+          "403": {
+            "$ref": "#/responses/ErrorResponse403"
+          },
+          "404": {
+            "$ref": "#/responses/ErrorResponse404"
+          },
+          "405": {
+            "$ref": "#/responses/ErrorResponse405"
+          },
+          "406": {
+            "$ref": "#/responses/ErrorResponse406"
+          },
+          "501": {
+            "$ref": "#/responses/ErrorResponse501"
+          },
+          "503": {
+            "$ref": "#/responses/ErrorResponse503"
+          }
+        }
+      },
+      "put": {
+        "description": "The callback PUT /transactionRequests/<ID> is used to inform the client of a requested or created transaction request. The <ID> in the URI should contain the transactionRequestId that was used for the creation of the transaction request, or the <ID> that was used in the GET /transactionRequests/<ID>.",
+        "summary": "TransactionRequestsByID",
+        "tags": [
+          "transactionRequests"
+        ],
+        "operationId": "TransactionRequestsByIDPut",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TransactionRequestsIDPutResponse"
+            }
+          },
+          {
+            "$ref": "#/parameters/Content-Length"
+          }
+        ],
+        "x-examples": {
+          "application/json": {
+            "“transactionId”": "“b51ec534-ee48-4575-b6a9-ead2955b8069”",
+            "“transactionRequestState”": "“RECEIVED”",
+            "extensionList": {
+              "extension": [
+                {
+                  "“key”": "“errorDescription”",
+                  "“value”": "“This is a more detailed error description”"
+                },
+                {
+                  "“key”": "“errorDescription”",
+                  "“value”": "“This is a more detailed error description”"
+                }
+              ]
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/responses/Response200"
+          },
+          "400": {
+            "$ref": "#/responses/ErrorResponse400"
+          },
+          "401": {
+            "$ref": "#/responses/ErrorResponse401"
+          },
+          "403": {
+            "$ref": "#/responses/ErrorResponse403"
+          },
+          "404": {
+            "$ref": "#/responses/ErrorResponse404"
+          },
+          "405": {
+            "$ref": "#/responses/ErrorResponse405"
+          },
+          "406": {
+            "$ref": "#/responses/ErrorResponse406"
+          },
+          "501": {
+            "$ref": "#/responses/ErrorResponse501"
+          },
+          "503": {
+            "$ref": "#/responses/ErrorResponse503"
+          }
+        }
+      }
+    },
+    "/transactionRequests": {
+      "post": {
+        "description": "The HTTP request POST /transactionRequests is used to request the creation of a transaction request for the provided financial transaction in the server.",
+        "summary": "TransactionRequests",
+        "tags": [
+          "transactionRequests"
+        ],
+        "operationId": "TransactionRequests",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TransactionRequestsPostRequest"
+            }
+          },
+          {
+            "$ref": "#/parameters/Accept"
+          },
+          {
+            "$ref": "#/parameters/Content-Length"
+          },
+          {
+            "$ref": "#/parameters/Content-Type"
+          },
+          {
+            "$ref": "#/parameters/Date"
+          },
+          {
+            "$ref": "#/parameters/X-Forwarded-For"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Source"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Destination"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Encryption"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-Signature"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-URI"
+          },
+          {
+            "$ref": "#/parameters/FSPIOP-HTTP-Method"
+          }
+        ],
+        "x-examples": {
+          "application/json": {
+            "“transactionRequestId”": "“b51ec534-ee48-4575-b6a9-ead2955b8069”",
+            "“payee”": {
+              "partyIdInfo": {
+                "“partyIdType”": "“PERSONAL_ID”",
+                "“partyIdentifier”": "“16135551212”",
+                "“partySubIdOrType”": "“DRIVING_LICENSE”",
+                "“fspId”": "“1234”"
+              },
+              "merchantClassificationCode": "4321",
+              "“name”": "“Justin Trudeau”",
+              "“personalInfo”": {
+                "“complexName”": {
+                  "“firstName”": "“Justin”",
+                  "“middleName”": "“Pierre”",
+                  "“lastName”": "“Trudeau”"
+                },
+                "“dateOfBirth”": "“1971-12-25”"
+              }
+            },
+            "“payer”": {
+              "“partyIdType”": "“PERSONAL_ID”",
+              "“partyIdentifier”": "“16135551212”",
+              "“partySubIdOrType”": "“DRIVING_LICENSE”",
+              "“fspId”": "“1234”"
+            },
+            "“amount”": {
+              "“currency”": "“USD”",
+              "“amount”": "“123.45”"
+            },
+            "“transactionType”": {
+              "“scenario”": "“DEPOSIT”",
+              "“subScenario”": "“locally defined sub-scenario”",
+              "“initiator”": "“PAYEE”",
+              "“initiatorType”": "“CONSUMER”",
+              "“refundInfo”": {
+                "“originalTransactionId”": "“b51ec534-ee48-4575-b6a9-ead2955b8069”",
+                "“refundReason”": "“free text indicating reason for the refund”"
+              },
+              "“balanceOfPayments”": "“123”"
+            },
+            "“note”": "“Free-text memo”",
+            "“geoCode”": {
+              "“latitude”": "“+45.4215”",
+              "“longitude”": "“+75.6972”"
+            },
+            "“authenticationType”": "“OTP”",
+            "“expiration”": "“2016-05-24T08:38:08.699-04:00”",
+            "extensionList": {
+              "extension": [
+                {
+                  "“key”": "“errorDescription”",
+                  "“value”": "“This is a more detailed error description”"
+                },
+                {
+                  "“key”": "“errorDescription”",
+                  "“value”": "“This is a more detailed error description”"
+                }
+              ]
+            }
+          }
+        },
+        "responses": {
+          "202": {
+            "$ref": "#/responses/Response202"
+          },
+          "400": {
+            "$ref": "#/responses/ErrorResponse400"
+          },
+          "401": {
+            "$ref": "#/responses/ErrorResponse401"
+          },
+          "403": {
+            "$ref": "#/responses/ErrorResponse403"
+          },
+          "404": {
+            "$ref": "#/responses/ErrorResponse404"
+          },
+          "405": {
+            "$ref": "#/responses/ErrorResponse405"
+          },
+          "406": {
+            "$ref": "#/responses/ErrorResponse406"
+          },
+          "501": {
+            "$ref": "#/responses/ErrorResponse501"
+          },
+          "503": {
+            "$ref": "#/responses/ErrorResponse503"
+          }
+        }
+      }
     }
   },
   "definitions": {
